# art-tts

./: .gitignore  README.md  get_UTMOS_data.sh  get_voxcommunis_analysis.sh  get_voxcommunis_hifipreds.sh  pyproject.toml
UTMOS-demo/: ms_process_dataset.sh  predict.py  predict.sh  process_dataset.sh  process_dataset_v2_full.sh  process_voxcom.sh  process_voxcomsparc.sh
src/: LJspeech_prep.ipynb  arttts_inference.py  arttts_inference_ms.py  balance_batch.py  create_manifests.ipynb  data.py  data_ms.py  data_phnm.py  data_phnmmel.py  data_textart.py  data_textmel.py  encode_audio_voxcom.py  explo_spk_emb.ipynb  explo_voxcom.ipynb  generate_phnm3.py  hifigan_inference.py  hifigan_inference_ms.py  lengths_preds.ipynb  metrics.py  model_explo.ipynb  paths.py  phnm_datasets.ipynb  pitch_stats.py  quanti_art_comp.py  quanti_art_comp_align.ipynb  quanti_art_sparc.ipynb  quanti_art_voxcom.py  quanti_art_voxcom_custom.py  quanti_mel_comp.ipynb  quanti_mel_comp.py  quanti_voxcom.ipynb  sparc_related.ipynb  test_models.ipynb  train.py  train_msml1h.py  train_v1.py  train_v1_1.py  train_v1_1_dist.py  train_v1_bis.py  train_v2.py  (+8 more)
src/config_ema/: MSPKA_EMA_ita.yaml  mocha_timit.yaml  pb2007.yaml
src/configs/: params_msml1h.py  params_v0.py  params_v1.py  params_v1_1.py  params_v2.py  params_v2_phnmtext.py  params_v3.py  params_v4.py  params_v4_phnmtext.py  params_v5.py  params_v5_preblock.py  params_v6.py  params_v6_zhCN.py
src/hifi-gan/: env.py  meldataset.py  models.py  xutils.py
src/model/: __init__.py  diffusion.py  diffusion_1D.py  diffusion_1D_preblock.py  tts.py  (+2 more)
(+111 files in other folders)
