[project]
name = "art-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=0.29.23",
    "inflect==5.0.2",
    "speech-articulatory-coding>=0.1.0",
    "unidecode==1.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
]
