[project]
name = "art-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=0.29.23",
    "einops==0.3.0",
    "h5py>=3.14.0",
    "inflect==5.0.2",
    "panphon",
    "speech-articulatory-coding>=0.1.0",
    "tslearn>=0.6.3",
    "unidecode==1.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
panphon = { git = "https://github.com/antoinelii/panphon" }
